# mavis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  EXTENSIONS_SUPPORTED.md  README.md  json.hpp
.github/: CODEOWNERS
.github/actions/: build.sh  regress.sh
.github/workflows/: build-regress.yaml  check-json.yml
cmake/: bitset2.cmake  internal.cmake.example  quadmath.cmake  softfloat.cmake
doc/: Developing.md  Doxyfile  Makefile
doc/mavis_docs/: building.txt  json.txt  mainpage.txt
example/: CMakeLists.txt
example/SimpleExample/: CMakeLists.txt  Inst.h  main.cpp  uArchInfo.h
impl/: DTable.tcc  DTableBuildSpecial.tcc  ExtractorDerived.tpp  ExtractorForms.tpp  ExtractorRegistry.cpp  Form.h  FormRegistry.cpp  InstMetaData.cpp  tmp
impl/forms/: AndeStarExtractorForms.h  AndeStarForms.cpp  AndeStarForms.h  CommonForms.cpp  CommonForms.h  CompressedForms.cpp  CompressedForms.h  ExtractorDerived.h  ExtractorForms.h  VectorForms.cpp  VectorForms.h
json/: isa_rv128q.json  isa_rv128q_addons.json  isa_rv32a.json  isa_rv32b.json  isa_rv32c.json  isa_rv32cd.json  isa_rv32cf.json  isa_rv32d.json  isa_rv32f.json  isa_rv32g.json  isa_rv32h.json  isa_rv32i.json  isa_rv32m.json  isa_rv32q.json  isa_rv32smrnmi.json  isa_rv32svinval.json  isa_rv32svinval_h.json  isa_rv32zaamo.json  isa_rv32zabha.json  isa_rv32zacas.json  isa_rv32zalrsc.json  isa_rv32zawrs.json  isa_rv32zba.json  isa_rv32zbb.json  isa_rv32zbb_zbkb_common.json  isa_rv32zbc.json  isa_rv32zbkb.json  isa_rv32zbkx.json  isa_rv32zbs.json  isa_rv32zca.json  isa_rv32zcb.json  isa_rv32zcd.json  isa_rv32zce.json  isa_rv32zcf.json  isa_rv32zclsd.json  isa_rv32zcmop.json  isa_rv32zcmp.json  isa_rv32zcmt.json  isa_rv32zfa.json  isa_rv32zfa_d.json  (+120 more)
json/exclude/: isa_rv32zcmp.json  isa_rv64zcmp.json
mavis/: AnnotationRegistry.hpp  BuilderBase.hpp  ContextRegistry.hpp  DTable.h  DecodedInstInfo.h  DecoderConsts.h  DecoderExceptions.h  DecoderTypes.h  Disassembler.hpp  DisassemblerIF.hpp  DualKeyRegistry.hpp  ExtensionManager.hpp  Extractor.h  ExtractorDerived.h  ExtractorDirectImplementations.hpp  ExtractorDirectInfo.h  ExtractorForms.h  ExtractorIF.h  ExtractorRegistry.h  ExtractorTraceInfo.h  ExtractorWrap.hpp  Field.h  Float.h  FloatUtils.h  Form.h  FormCommon.h  FormGeneric.hpp  FormIF.h  FormPseudo.h  FormRegistry.h  FormStub.h  Format.h  GenericRegistry.h  GenericRegistryTraits.h  IFactory.h  IFactoryBuilder.h  IFactoryCustom.h  IFactoryPseudo.hpp  InstMetaData.h  InstMetaDataRegistry.hpp  (+15 more)
mavis/extension_managers/: RISCVExtensionManager.hpp
mavis/float_types/: BFloat.h  Double.h  Half.h  Quad.h  Single.h
patches/: 0002-Patch-to-silence-unsupported-option-print-multi-os-d.patch
scripts/: check_jsons  clone_libquadmath  parse_opcodes_mavis
stubs/: CMakeLists.txt  quadmath_stubs.cpp  quadmath_stubs.h
test/: CMakeLists.txt  Inst.h  Makefile  andestar.tset  golden.out  isa_pseudo.json  isa_tagged.json  main.cpp  mallard_uarch_pseudo.json  mallard_uarch_rv64g.json  out  riscv_all.json  riscv_all.tset  riscv_core.tset  riscv_test.json  riscv_test.tset  rv64.json  rv64.tset  rv64_base.json  rv64_bf16.tset  rv64_bits.tset  rv64_vector.json  test.out  uArchInfo.h  uarch_pseudo.json
test/basic/: CMakeLists.txt  Inst.h  golden.out  isa_pseudo.json  isa_tagged.json  main.cpp  rv32_zknd.tset  rv32_zkne.tset  rv64.tset  rv64_base.json  rv64_bits.tset  rv64_zbkx.tset  rv64_zknd.tset  rv64_zkne.tset  rv64h.tset  uArchInfo.h  uArchInfoExceptions.hpp  uarch_core.json  uarch_rv32g.json  uarch_rv64g.json
test/directed/: CMakeLists.txt  main.cpp
test/extensions/: CMakeLists.txt  hello  hello.c  hello_stripped  main.cpp
test/fp/: CMakeLists.txt  clone_libquadmath  dump_fli_table.cpp  fli_golden.out  fp_golden.out  main.cpp  quadmath.cmake  simde.cmake
test/fp/hard_float_types/: BFloat.h  Double.h  Half.h  Quad.h  Single.h
test/fp/patches/: 0001-Patch-to-enable-building-quadmath-with-clang.patch
test/fp/stubs/: CMakeLists.txt
test/perf/: CMakeLists.txt  main.cpp  rv64.tset
