include(CTest)
include(ProcessorCount)
ProcessorCount(NUM_CORES)

if (NUM_CORES GREATER 8)  # Max of 8 cores
  set(NUM_CORE, 8)
endif()
if (NOT NUM_CORES EQUAL 0)
  set(CTEST_BUILD_FLAGS -j${NUM_CORES})
  set(ctest_test_args ${ctest_test_args} PARALLEL_LEVEL ${NUM_CORES})
endif()

if (PROJECT_IS_TOP_LEVEL)
  add_custom_target(regress)
  add_custom_command(TARGET regress POST_BUILD COMMAND ${CMAKE_CTEST_COMMAND})
  set(ENABLE_MAVIS_TESTS True)
else()
  set(ENABLE_MAVIS_TESTS False)
endif()

function (mavis_test name target)
  if (ENABLE_MAVIS_TESTS)
    add_dependencies(regress ${target})
    add_test(NAME ${name} COMMAND ${ARGN})
  endif()
endfunction (mavis_test)

add_subdirectory(basic)
add_subdirectory(extensions)
add_subdirectory(directed)
add_subdirectory(perf)
add_subdirectory(fp)
